[package]
name = "relay"
version = "0.1.0"
edition = "2024"
description = "P2P WebTransport Relay Server for RISC-V VM networking"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "process"] }

# WebTransport
wtransport = "0.6.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Error handling
anyhow = "1.0"

# Serialization for protocol messages
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
